
2015-02-04 version 0.5.11:

* Fixed Encoding::CompatibilityError error when serializing a long string
  longer than write_reference_threshold (5KB by default) and whose encoding
  is not ASCII-8BIT.
* Fix read_(map|array)_header (@funny-falcon++).
* Internally, rename msgpack_unpacker_{init,reset,destroy} functions
  so that we can load msgpack-c in the same process (@miihael++)


2015-01-09 version 0.5.10:

* Merged msgpack-jruby by @iconara. JRuby can run `require 'msgpack'` to use
  msgpack-jruby.


2014-10-05 version 0.5.9:

* Fixed Unpacker#read_map_header and #read_array_header
* Added support for Symbol GC added since MRI 2.2.0


2013-12-14 version 0.5.8:

* Fixed compatibility with Ruby 2.1.0
* Added :symbolize_keys option to MessagePack.load and Unpacker#initialize


2013-10-12 version 0.5.7:

* Added deserialization support for the new MessagePack spec


2013-09-23 version 0.5.6:

* Fixed "can't modify frozen String" exception in Unpacker with ruby 2.1.0-dev
* Getting work with Ruby v2.0 on Windows (Thank you @thegreendroid)
* Fixed EOFError handling in Unpacker


2013-05-12 version 0.5.5:

* Fixed SEGV problem in to_msgpack
* Fixed a possible race condition in MessagePack.load when it loads data from IO
* mingw32 package includes binary for ruby-2.0.0


2013-03-15 version 0.5.4:

* Added missing MessagePack::Unpacker#reset method


2013-02-14 version 0.5.3:

* Fixed segfault problem on Buffer#clear (reuse rmem internal fragment optimization)
* Fixed segfault problem on Buffer (rmem free code)


2013-02-07 version 0.5.2:

* Fixed invalid pack/unpack on 32bit architecture such as Win32
* Disable rmem on Rubinius because rmem is not thread safe


2012-12-23 version 0.5.1:

* Fixed compile error with Rubinius 2.0.0-dev
* Optimized msgpack_packer_write_hash for Rubinius


2012-12-20 version 0.5.0:

* Rewrote all code and improved performance significantly
* Added MessagePack::Buffer class
* Added MessagePack::Packer class